Reorganized folder structure. Added some content to the api design section

--- a/thesis.tex
+++ b/thesis.tex
@@ -139,7 +139,7 @@ for Skeletal Tracking Sensors}
 
 \begin{abstract}
 
-\input{Abstract}
+\input{chapters/Abstract}
 
 \end{abstract}
 
@@ -169,19 +169,19 @@ Thanks to:
 
 % ------------- Main chapters here --------------------
 
-\include{Introduction}
+\include{chapters/Introduction}
 
-\include{Background}
+\include{chapters/Background}
 
-\include{RelatedWorks}
+\include{chapters/RelatedWorks}
 
-\include{APIDesign}
+\include{chapters/APIDesign}
 
-\include{Implementation}
+\include{chapters/Implementation}
 
-\include{Results}
+\include{chapters/Results}
 
-\include{ConclusionFutureWork}
+\include{chapters/ConclusionFutureWork}
 
 % ------------- End main chapters ----------------------
 
