APIDesign section draft written

--- a/thesis.tex
+++ b/thesis.tex
@@ -38,12 +38,12 @@
 
 \usepackage{hyperref}
 \hypersetup{
+	linktoc=all,
     colorlinks,
     citecolor=black,
     filecolor=black,
     linkcolor=black,
-    urlcolor=black,
-    linktoc=all
+    urlcolor=black
 }
 
 \usepackage{titlesec}
