Bib entries and citations for introduction complete.

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -5,3 +5,169 @@
   year={2012},
   publisher={MIT Press}
 }
+
+@article{hinckley2002input,
+  title={Input technologies and techniques},
+  author={Hinckley, Ken and Wigdor, Daniel},
+  journal={The human-computer interaction handbook: fundamentals, evolving technologies and emerging applications},
+  pages={151--168},
+  year={2002}
+}
+
+@INPROCEEDINGS{wren1996pfinder, 
+author={Wren, C. and Azarbayejani, A. and Darrell, T. and Pentland, A.}, 
+booktitle={Automatic Face and Gesture Recognition, 1996., Proceedings of the Second International Conference on}, 
+title={Pfinder: real-time tracking of the human body}, 
+year={1996}, 
+month={Oct}, 
+pages={51-56}, 
+keywords={feature extraction;image sequences;object recognition;optical tracking;real-time systems;statistical analysis;Pfinder;SGI Indy computer;hands;head;human body;low-bandwidth coding;multi-class statistical model;real-time tracking;video databases;wireless interfaces;Cameras;Communication system security;Hardware;Head;Humans;Space exploration;Space technology;Video compression;Virtual reality;Wireless sensor networks}, 
+doi={10.1109/AFGR.1996.557243}
+}
+
+@book{krueger1991artificial,
+  title={Artificial reality II},
+  author={Krueger, Myron W},
+  volume={10},
+  year={1991},
+  publisher={Addison-Wesley Reading (Ma)}
+}
+
+@article{hamade2007evaluating,
+  title={Evaluating the learning process of mechanical CAD students},
+  author={Hamade, Ramsey F and Artail, Hassan A and Jaber, Mohamad Y},
+  journal={Computers \& Education},
+  volume={49},
+  number={3},
+  pages={640--661},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@inproceedings{nam1996recognition,
+  title={Recognition of space-time hand-gestures using hidden Markov model},
+  author={Nam, Yanghee and Wohn, K and others},
+  booktitle={ACM symposium on Virtual reality software and technology},
+  pages={51--58},
+  year={1996}
+}
+
+@article{pasch2009movement,
+  title={Movement-based sports video games: Investigating motivation and gaming experience},
+  author={Pasch, Marco and Bianchi-Berthouze, Nadia and van Dijk, Betsy and Nijholt, Anton},
+  journal={Entertainment Computing},
+  volume={1},
+  number={2},
+  pages={49--61},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@online{kinectlaunch, 
+title = {Microsoft Xbox 360 Kinect Launches November 4}, 
+author = {}, 
+organization = {}, 
+file = {:./references/Microsoft Xbox 360 Kinect Launches November 4.html:html}, 
+url = {http://gizmodo.com/5563148/microsoft-xbox-360-kinect-launches-november-4}, 
+urldate = {2014-05-15} 
+}
+
+@article{zhang2012microsoft,
+  title={Microsoft kinect sensor and its effect},
+  author={Zhang, Zhengyou},
+  journal={MultiMedia, IEEE},
+  volume={19},
+  number={2},
+  pages={4--10},
+  year={2012},
+  publisher={IEEE}
+}
+
+@inproceedings{moyle2003design,
+  title={The design and evaluation of a flick gesture for'back'and'forward'in web browsers},
+  author={Moyle, Michael and Cockburn, Andy},
+  booktitle={Proceedings of the Fourth Australasian user interface conference on User interfaces 2003-Volume 18},
+  pages={39--46},
+  year={2003},
+  organization={Australian Computer Society, Inc.}
+}
+
+@Online{dnd_interface, 
+title = {3D User Interfaces},
+author = {}, 
+organization = {}, 
+file = {:./references/3D User Interfaces.html:html},
+url = {http://nooface.net/3dui.shtml}, 
+urldate = {2014-05-15} }
+
+@book{parent2012computer,
+  title={Computer animation: algorithms and techniques},
+  author={Parent, Rick},
+  year={2012},
+  publisher={Newnes}
+}
+
+@article{moeslund2006survey,
+  title={A survey of advances in vision-based human motion capture and analysis},
+  author={Moeslund, Thomas B and Hilton, Adrian and Kr{\"u}ger, Volker},
+  journal={Computer vision and image understanding},
+  volume={104},
+  number={2},
+  pages={90--126},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{weichert2013analysis,
+  title={Analysis of the accuracy and robustness of the leap motion controller},
+  author={Weichert, Frank and Bachmann, Daniel and Rudak, Bartholom{\"a}us and Fisseler, Denis},
+  journal={Sensors (Basel, Switzerland)},
+  volume={13},
+  number={5},
+  pages={6380},
+  year={2013},
+  publisher={Multidisciplinary Digital Publishing Institute (MDPI)}
+}
+
+@inproceedings{kratz2013depth,
+ author = {Kratz, Sven and Chiu, Patrick and Back, Maribeth},
+ title = {PointPose Demo: Using a Depth Camera for Finger Pose Estimation on Touch-based Mobile Devices},
+ booktitle = {Proceedings of the 2013 ACM International Conference on Interactive Tabletops and Surfaces},
+ series = {ITS '13},
+ year = {2013},
+ isbn = {978-1-4503-2271-3},
+ location = {St. Andrews, Scotland, United Kingdom},
+ pages = {321--324},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/2512349.2514594},
+ doi = {10.1145/2512349.2514594},
+ acmid = {2514594},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {depth sensor, finger pose, mobile device, mobile interaction, point cloud, touch input},
+} 
+
+@inproceedings{basu2012immersive,
+  title={Immersive 3dui on one dollar a day},
+  author={Basu, Aryabrata and Saupe, Christian and Refour, Eric and Raij, Andrew and Johnsen, Kyle},
+  booktitle={3D User Interfaces (3DUI), 2012 IEEE Symposium on},
+  pages={97--100},
+  year={2012},
+  organization={IEEE}
+}
+
+@Online{kinect_dance,
+title = {7 Games That Make Xbox Kinect Worth Every Penny}, 
+author = {}, 
+organization = {}, 
+file = {:./references/7 Games That Make Xbox Kinect Worth Every Penny.html:html}, 
+url = {http://mashable.com/2012/08/26/best-games-kinect-xbox-360/}, 
+urldate = {2014-05-15} }
+
+@Online{rift_hydra, 
+title = {RiftEnabled™ – Feature filtering}, 
+author = {}, 
+organization = {}, 
+file = {:./references/RiftEnabled™ – Feature filtering.html:html}, 
+url = {http://www.riftenabled.com/admin/apps/feature/10}, 
+urldate = {2014-05-15} }
