References and bib entries for Background inserted

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -63,13 +63,10 @@ doi={10.1109/AFGR.1996.557243}
   publisher={Elsevier}
 }
 
-@online{kinectlaunch, 
+@misc{kinectlaunch, 
 title = {Microsoft Xbox 360 Kinect Launches November 4}, 
-author = {}, 
-organization = {}, 
-file = {:./references/Microsoft Xbox 360 Kinect Launches November 4.html:html}, 
-url = {http://gizmodo.com/5563148/microsoft-xbox-360-kinect-launches-november-4}, 
-urldate = {2014-05-15} 
+author = {Gizmodo},  
+howpublished = {Retrieved May 15th, 2014 from \url{http://gizmodo.com/5563148/microsoft-xbox-360-kinect-launches-november-4}}
 }
 
 @article{zhang2012microsoft,
@@ -92,13 +89,11 @@ urldate = {2014-05-15}
   organization={Australian Computer Society, Inc.}
 }
 
-@Online{dnd_interface, 
+@misc{dnd_interface, 
 title = {3D User Interfaces},
-author = {}, 
-organization = {}, 
-file = {:./references/3D User Interfaces.html:html},
-url = {http://nooface.net/3dui.shtml}, 
-urldate = {2014-05-15} }
+author = {NooFace}, 
+howpublished = {Retrieved May 15th, 2014 from \url{http://nooface.net/3dui.shtml}}
+}
 
 @book{parent2012computer,
   title={Computer animation: algorithms and techniques},
@@ -156,18 +151,130 @@ urldate = {2014-05-15} }
   organization={IEEE}
 }
 
-@Online{kinect_dance,
+@misc{kinect_dance,
 title = {7 Games That Make Xbox Kinect Worth Every Penny}, 
-author = {}, 
-organization = {}, 
-file = {:./references/7 Games That Make Xbox Kinect Worth Every Penny.html:html}, 
-url = {http://mashable.com/2012/08/26/best-games-kinect-xbox-360/}, 
-urldate = {2014-05-15} }
+author = {Mashable}, 
+howpublished = {Retrieved May 15th, 2014 from \url{http://mashable.com/2012/08/26/best-games-kinect-xbox-360/}}
+}
 
-@Online{rift_hydra, 
-title = {RiftEnabled™ – Feature filtering}, 
-author = {}, 
-organization = {}, 
-file = {:./references/RiftEnabled™ – Feature filtering.html:html}, 
-url = {http://www.riftenabled.com/admin/apps/feature/10}, 
-urldate = {2014-05-15} }
+@misc{rift_hydra, 
+title = {RiftEnabled™ – Hydra Support}, 
+author = {RiftEnabled}, 
+howpublished = {Retrieved May 15th, 2014 from \url{http://www.riftenabled.com/admin/apps/feature/10}}
+}
+
+@article{zhu2004real,
+  title={A real-time articulated human motion tracking using tri-axis inertial/magnetic sensors package},
+  author={Zhu, Rong and Zhou, Zhaoying},
+  journal={Neural Systems and Rehabilitation Engineering, IEEE Transactions on},
+  volume={12},
+  number={2},
+  pages={295--302},
+  year={2004},
+  publisher={IEEE}
+}
+
+@phdthesis{roberts1963machine,
+  title={MACHINE PERCEPTION OF THREE-DIMENSIONAL SOLIDS},
+  author={Roberts, Lawrence Gilman},
+  year={1963},
+  school={Massachusetts Institute of Technology}
+}
+
+@misc{sixense_stem, 
+title = {Sixense STEM System}, 
+author = {Sixense}, 
+howpublished = {Retrieved May 15th, 2014 from \url{http://sixense.com/hardware/wireless}}
+}
+
+@misc{oculus2012oculus,
+  title={Oculus rift-virtual reality headset for 3d gaming},
+  author={Oculus, VR},
+  howpublished = {Retrieved May 15th, 2014 from \url{http://www.oculusvr.com}}
+}
+
+@misc{priovr,
+  title={PrioVR},
+  author={YEI Technology},
+  howpublished = {Retrieved May 15th, 2014 from \url{http://www.yeitechnology.com/priovr}}
+}
+
+@article{besl1988active,
+  title={Active, optical range imaging sensors},
+  author={Besl, Paul J},
+  journal={Machine vision and applications},
+  volume={1},
+  number={2},
+  pages={127--152},
+  year={1988},
+  publisher={Springer}
+}
+
+@inproceedings{shimada2001real,
+  title={Real-time 3D hand posture estimation based on 2D appearance retrieval using monocular camera},
+  author={Shimada, Nobutaka and Kimura, Kousuke and Shirai, Yoshiaki},
+  booktitle={Recognition, Analysis, and Tracking of Faces and Gestures in Real-Time Systems, 2001. Proceedings. IEEE ICCV Workshop On},
+  pages={23--30},
+  year={2001},
+  organization={IEEE}
+}
+
+@inproceedings{scharstein2003high,
+  title={High-accuracy stereo depth maps using structured light},
+  author={Scharstein, Daniel and Szeliski, Richard},
+  booktitle={Computer Vision and Pattern Recognition, 2003. Proceedings. 2003 IEEE Computer Society Conference on},
+  volume={1},
+  pages={I--195},
+  year={2003},
+  organization={IEEE}
+}
+
+@article{litime,
+  title={Time-of-Flight Camera--An Introduction},
+  author={Li, Larry},
+  publisher={Texas Instruments}
+}
+
+@article{kinect2,
+  title={Collaboration, expertise produce enhanced sensing in Xbox One},
+  author={Knies, Rob},
+  publisher={Microsoft Research},
+  howpublished = {Retrieved May 15th, 2014 from \url{http://blogs.technet.com/b/microsoft_blog/archive/2013/10/02/collaboration-expertise-produce-enhanced-sensing-in-xbox-one.aspx}}
+}
+
+@misc{senz3d,
+	title={Creative Senz3D},
+	author={Creative},
+	howpublished = {Retrieved May 15, 2014 from \url{http://us.creative.com/p/web-cameras/creative-senz3d}}
+}
+
+@inproceedings{lucas1981iterative,
+  title={An iterative image registration technique with an application to stereo vision.},
+  author={Lucas, Bruce D and Kanade, Takeo and others},
+  booktitle={IJCAI},
+  volume={81},
+  pages={674--679},
+  year={1981}
+}
+
+@article{kalman1960new,
+  title={A new approach to linear filtering and prediction problems},
+  author={Kalman, Rudolph Emil},
+  journal={Journal of basic Engineering},
+  volume={82},
+  number={1},
+  pages={35--45},
+  year={1960},
+  publisher={American Society of Mechanical Engineers}
+}
+
+@article{sanjeev2002tutorial,
+  title={A tutorial on particle filters for online nonlinear/non-Gaussian Bayesian tracking},
+  author={Sanjeev Arulampalam, M and Maskell, Simon and Gordon, Neil and Clapp, Tim},
+  journal={Signal Processing, IEEE Transactions on},
+  volume={50},
+  number={2},
+  pages={174--188},
+  year={2002},
+  publisher={IEEE}
+}
