Related works references and citations placed

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -278,3 +278,33 @@ howpublished = {Retrieved May 15th, 2014 from \url{http://sixense.com/hardware/w
   year={2002},
   publisher={IEEE}
 }
+
+@inproceedings{rusu20113d,
+  title={3d is here: Point cloud library (pcl)},
+  author={Rusu, Radu Bogdan and Cousins, Steve},
+  booktitle={Robotics and Automation (ICRA), 2011 IEEE International Conference on},
+  pages={1--4},
+  year={2011},
+  organization={IEEE}
+}
+
+@incollection{kreylos2008environment,
+  title={Environment-independent VR development},
+  author={Kreylos, Oliver},
+  booktitle={Advances in Visual Computing},
+  pages={901--912},
+  year={2008},
+  publisher={Springer}
+}
+
+@misc{middle_vr,
+author = {ImInVR},
+title = {MiddleVR},
+howpublished= {Retrieved May 14th, 2014 from \url{http://www.imin-vr.com/middlevr/}}
+}
+ 
+@misc{vrpn,
+author = {University of North Carolina},
+title = {Virtual Reality Peripheral Network},
+howpublished= {Retrieved May 14th, 2014 from \url{http://www.cs.unc.edu/Research/vrpn/}}
+}
