--- a/thesis.tex
+++ b/thesis.tex
@@ -169,9 +169,9 @@ Thanks to:
 
 \include{chapters/RelatedWorks}
 
-\include{chapters/APIDesign}
+\include{chapters/APIDesignImpl}
 
-\include{chapters/Implementation}
+\include{chapters/ModuleImplementation}
 
 \include{chapters/Results}
 
