Api design and iml written and inter-referenced and fig referenced. Figures still not present

--- a/thesis.tex
+++ b/thesis.tex
@@ -90,6 +90,9 @@
 
 \geometry{verbose,nohead,tmargin=1.25in,bmargin=1in,lmargin=1.5in,rmargin=1.3in}
 
+\setcounter{tocdepth}{3}
+\setcounter{secnumdepth}{3}
+
 
 % Different font in captions (single-spaced, bold) ------------
 %\newcommand{\captionfonts}{\small\bf\ssp}
@@ -182,7 +185,6 @@ Thanks to:
 \clearpage
 \bibliographystyle{plain}
 \bibliography{Bibliography}
-\addcontentsline{toc}{chapter}{Bibliography}
 
 %\begin{appendix}
 %%\addcontentsline{toc}{chapter}{\appendixnamelower}
