Most of implementation written. Some details added to design.

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -308,3 +308,19 @@ author = {University of North Carolina},
 title = {Virtual Reality Peripheral Network},
 howpublished= {Retrieved May 14th, 2014 from \url{http://www.cs.unc.edu/Research/vrpn/}}
 }
+
+@misc{glm,
+author = {G-Truc Creation},
+title = {OpenGL Mathematics},
+howpublished= {Retrieved May 18th, 2014 from \url{http://glm.g-truc.net/0.9.5/index.html}}
+}
+
+@article{markley2007averaging,
+  title={Averaging quaternions},
+  author={Markley, F Landis and Cheng, Yang and Crassidis, John Lucas and Oshman, Yaakov},
+  journal={Journal of Guidance, Control, and Dynamics},
+  volume={30},
+  number={4},
+  pages={1193--1197},
+  year={2007}
+}
