Content draft-complete

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -324,3 +324,14 @@ howpublished= {Retrieved May 18th, 2014 from \url{http://glm.g-truc.net/0.9.5/in
   pages={1193--1197},
   year={2007}
 }
+
+@article{tolani2000real,
+  title={Real-time inverse kinematics techniques for anthropomorphic limbs},
+  author={Tolani, Deepak and Goswami, Ambarish and Badler, Norman I},
+  journal={Graphical models},
+  volume={62},
+  number={5},
+  pages={353--388},
+  year={2000},
+  publisher={Elsevier}
+}
