--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -335,3 +335,10 @@ howpublished= {Retrieved May 18th, 2014 from \url{http://glm.g-truc.net/0.9.5/in
   year={2000},
   publisher={Elsevier}
 }
+
+@misc{structured_pattern,
+author = {Trevor Taylor},
+title = {Kinect for Robotics},
+howpublished= {Retrieved May 14th, 2014 from \url{http://blogs.msdn.com/b/msroboticsstudio/archive/2011/11/29/kinect-for-robotics.aspx?Redirected=true}}
+}
+
