--- a/thesis.tex
+++ b/thesis.tex
@@ -118,7 +118,7 @@
 % Update fields below!
 \title{Jester: 
 A Device Abstraction and Data Fusion API 
-for Skeletal Tracking Sensors}
+for Skeletal Tracking Sensors - DRAFT}
 \author{Kevin Schapansky}
 \degreemonth{June} \degreeyear{2014} \degree{Master of Science}
 \defensemonth{June} \defenseyear{2014}
