Committee edits complete through chapter 3.

--- a/thesis.tex
+++ b/thesis.tex
@@ -88,7 +88,7 @@
 
 \setlength{\parindent}{0.25in} \setlength{\parskip}{6pt}
 
-\geometry{verbose,nohead,tmargin=1.25in,bmargin=1in,lmargin=1.5in,rmargin=1.3in}
+\geometry{verbose,nohead,tmargin=1.0in,bmargin=1.0in,lmargin=1.5in,rmargin=1.0in}
 
 \setcounter{tocdepth}{3}
 \setcounter{secnumdepth}{3}
@@ -118,7 +118,7 @@
 % Update fields below!
 \title{Jester: 
 A Device Abstraction and Data Fusion API 
-for Skeletal Tracking Sensors - DRAFT}
+for Skeletal Tracking Sensors}
 \author{Kevin Schapansky}
 \degreemonth{June} \degreeyear{2014} \degree{Master of Science}
 \defensemonth{June} \defenseyear{2014}
@@ -147,7 +147,7 @@ Thanks to:
 
 \begin{itemize}
 \item My advisor Zo{\"e} Wood, for being literally the coolest.
-\item My parents for money and love.
+\item My parents for years of amazing support.
 \end{itemize}
 
 \end{acknowledgements}
