--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,6 +1,6 @@
 
 @book{gortler2012foundations,
-  title={Foundations of 3D computer graphics},
+  title={Foundations of {3D} computer graphics},
   author={Gortler, Steven J},
   year={2012},
   publisher={MIT Press}
@@ -34,7 +34,7 @@ doi={10.1109/AFGR.1996.557243}
 }
 
 @article{hamade2007evaluating,
-  title={Evaluating the learning process of mechanical CAD students},
+  title={Evaluating the learning process of mechanical {CAD} students},
   author={Hamade, Ramsey F and Artail, Hassan A and Jaber, Mohamad Y},
   journal={Computers \& Education},
   volume={49},
@@ -45,7 +45,7 @@ doi={10.1109/AFGR.1996.557243}
 }
 
 @inproceedings{nam1996recognition,
-  title={Recognition of space-time hand-gestures using hidden Markov model},
+  title={Recognition of space-time hand-gestures using hidden {Markov} model},
   author={Nam, Yanghee and Wohn, K and others},
   booktitle={ACM symposium on Virtual reality software and technology},
   pages={51--58},
@@ -64,13 +64,13 @@ doi={10.1109/AFGR.1996.557243}
 }
 
 @misc{kinectlaunch, 
-title = {Microsoft Xbox 360 Kinect Launches November 4}, 
+title = {Microsoft {Xbox} 360 {Kinect} Launches {November} 4}, 
 author = {Gizmodo},  
 howpublished = {Retrieved May 15th, 2014 from \url{http://gizmodo.com/5563148/microsoft-xbox-360-kinect-launches-november-4}}
 }
 
 @article{zhang2012microsoft,
-  title={Microsoft kinect sensor and its effect},
+  title={Microsoft {Kinect} sensor and its effect},
   author={Zhang, Zhengyou},
   journal={MultiMedia, IEEE},
   volume={19},
@@ -81,7 +81,7 @@ howpublished = {Retrieved May 15th, 2014 from \url{http://gizmodo.com/5563148/mi
 }
 
 @inproceedings{moyle2003design,
-  title={The design and evaluation of a flick gesture for'back'and'forward'in web browsers},
+  title={The design and evaluation of a flick gesture for `back' and `forward' in web browsers},
   author={Moyle, Michael and Cockburn, Andy},
   booktitle={Proceedings of the Fourth Australasian user interface conference on User interfaces 2003-Volume 18},
   pages={39--46},
@@ -114,7 +114,7 @@ howpublished = {Retrieved May 15th, 2014 from \url{http://nooface.net/3dui.shtml
 }
 
 @article{weichert2013analysis,
-  title={Analysis of the accuracy and robustness of the leap motion controller},
+  title={Analysis of the accuracy and robustness of the {Leap} {Motion} {Controller}},
   author={Weichert, Frank and Bachmann, Daniel and Rudak, Bartholom{\"a}us and Fisseler, Denis},
   journal={Sensors (Basel, Switzerland)},
   volume={13},
@@ -143,22 +143,22 @@ howpublished = {Retrieved May 15th, 2014 from \url{http://nooface.net/3dui.shtml
 } 
 
 @inproceedings{basu2012immersive,
-  title={Immersive 3dui on one dollar a day},
+  title={Immersive {3DUI} on one dollar a day},
   author={Basu, Aryabrata and Saupe, Christian and Refour, Eric and Raij, Andrew and Johnsen, Kyle},
-  booktitle={3D User Interfaces (3DUI), 2012 IEEE Symposium on},
+  booktitle={3D User Interfaces ({3DUI}), 2012 IEEE Symposium on},
   pages={97--100},
   year={2012},
   organization={IEEE}
 }
 
 @misc{kinect_dance,
-title = {7 Games That Make Xbox Kinect Worth Every Penny}, 
+title = {7 Games That Make {Xbox} {Kinect} Worth Every Penny}, 
 author = {Mashable}, 
 howpublished = {Retrieved May 15th, 2014 from \url{http://mashable.com/2012/08/26/best-games-kinect-xbox-360/}}
 }
 
 @misc{rift_hydra, 
-title = {RiftEnabled™ – Hydra Support}, 
+title = {RiftEnabled™ – {Hydra} Support}, 
 author = {RiftEnabled}, 
 howpublished = {Retrieved May 15th, 2014 from \url{http://www.riftenabled.com/admin/apps/feature/10}}
 }
@@ -188,13 +188,13 @@ howpublished = {Retrieved May 15th, 2014 from \url{http://sixense.com/hardware/w
 }
 
 @misc{oculus2012oculus,
-  title={Oculus rift-virtual reality headset for 3d gaming},
+  title={Oculus {Rift}-virtual reality headset for 3d gaming},
   author={Oculus, VR},
   howpublished = {Retrieved May 15th, 2014 from \url{http://www.oculusvr.com}}
 }
 
 @misc{priovr,
-  title={PrioVR},
+  title={{PrioVR}},
   author={YEI Technology},
   howpublished = {Retrieved May 15th, 2014 from \url{http://www.yeitechnology.com/priovr}}
 }
@@ -236,14 +236,14 @@ howpublished = {Retrieved May 15th, 2014 from \url{http://sixense.com/hardware/w
 }
 
 @article{kinect2,
-  title={Collaboration, expertise produce enhanced sensing in Xbox One},
+  title={Collaboration, expertise produce enhanced sensing in {Xbox} {One}},
   author={Knies, Rob},
   publisher={Microsoft Research},
   howpublished = {Retrieved May 15th, 2014 from \url{http://blogs.technet.com/b/microsoft_blog/archive/2013/10/02/collaboration-expertise-produce-enhanced-sensing-in-xbox-one.aspx}}
 }
 
 @misc{senz3d,
-	title={Creative Senz3D},
+	title={Creative {Senz3D}},
 	author={Creative},
 	howpublished = {Retrieved May 15, 2014 from \url{http://us.creative.com/p/web-cameras/creative-senz3d}}
 }
@@ -280,7 +280,7 @@ howpublished = {Retrieved May 15th, 2014 from \url{http://sixense.com/hardware/w
 }
 
 @inproceedings{rusu20113d,
-  title={3d is here: Point cloud library (pcl)},
+  title={3d is here: Point cloud library ({PCL})},
   author={Rusu, Radu Bogdan and Cousins, Steve},
   booktitle={Robotics and Automation (ICRA), 2011 IEEE International Conference on},
   pages={1--4},
@@ -289,7 +289,7 @@ howpublished = {Retrieved May 15th, 2014 from \url{http://sixense.com/hardware/w
 }
 
 @incollection{kreylos2008environment,
-  title={Environment-independent VR development},
+  title={Environment-independent {VR} development},
   author={Kreylos, Oliver},
   booktitle={Advances in Visual Computing},
   pages={901--912},
@@ -299,7 +299,7 @@ howpublished = {Retrieved May 15th, 2014 from \url{http://sixense.com/hardware/w
 
 @misc{middle_vr,
 author = {ImInVR},
-title = {MiddleVR},
+title = {{MiddleVR}},
 howpublished= {Retrieved May 14th, 2014 from \url{http://www.imin-vr.com/middlevr/}}
 }
  
@@ -311,7 +311,7 @@ howpublished= {Retrieved May 14th, 2014 from \url{http://www.cs.unc.edu/Research
 
 @misc{glm,
 author = {G-Truc Creation},
-title = {OpenGL Mathematics},
+title = {{OpenGL} Mathematics},
 howpublished= {Retrieved May 18th, 2014 from \url{http://glm.g-truc.net/0.9.5/index.html}}
 }
 
